changes: --removed email signin --fixed modal component issue --fixed scrollbar issue in mapuser --fixed navbar dropdown issue at smaller screen --modified map user styles --removed commented code

--- a/src/module/admin-settings/components/map-user/map-user-modal/map-user.module.scss
+++ b/src/module/admin-settings/components/map-user/map-user-modal/map-user.module.scss
@@ -51,21 +51,25 @@
   width: 100%;
 }
 
-
 //actual dropdown menu
-.dropdownMenuOverlay {
-  max-height: 376px;
-  overflow-y: auto; 
+.dropdownMenu {
+  max-height: 320px;
+  overflow-y: hidden;
+  cursor: default;
+
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
   :global(.ant-dropdown-menu) {
     padding: 0;
   }  
   
-  :global(.ant-dropdown-menu-item) {
+  :global(.ant-dropdown-menu-item) {//actually this is the li menuitem and inside this li menu item we are displaying an entire selectuser as menu item
+    cursor: default !important;
     &:hover {
       background-color: transparent !important;
     }
   }
+
+
 }
 
 .roleName {
