--- a/src/module/admin-settings/components/role-listing/role-listing.module.scss
+++ b/src/module/admin-settings/components/role-listing/role-listing.module.scss
@@ -29,12 +29,13 @@
 }
 
 .actionTriggerWrapper{
-  padding: 6px 8px;
+  padding: 6px 6px;
   border-radius: 4px;
 }
 
 .actionTriggerWrapper:hover{
   background-color: rgba(0, 0, 0, 0.04);
+
 }
 
 .customSkeleton {
