--- a/src/themes/components/dropdown-menu/dropdown-menu.module.scss
+++ b/src/themes/components/dropdown-menu/dropdown-menu.module.scss
@@ -4,6 +4,6 @@
   align-items: center;
   cursor: pointer;
   border-radius: 12px;
-  padding: 0px 16px;
+  padding: 0px 0px;
 }
 
